pod.yaml
hahahaha
apiVersion: v1
# <string>指定api资源版本,格式group/version
kind: Pod
# <string>指定资源类别
metadata:
# <Object>指定元数据,内嵌字段
  name: pod-demo
  # <string>指定资源名称
  namespace: default
  # <string>指定名称空间,默认为default
  labels:
  # <map[string]string>指定标签格式为k:v,可以多个,每行一个
    app: myapp
  annotations:  
  # 资源注解<map[string]string>,与label不同的地方在于,他不能用于选择资源对象,
  # 仅用于为对象提供"元数据"格式如下:
    jc.com/created-by: "cluster admin"
spec:
# <Object>指定期望状态
  restartPolicy: Always
  # <string> 定义的容器重启策略
  # Always(挂了必须重启)
  # OnFailure(只有状态为错误时重启)
  # Never(从不重启),默认Always
  # 重启逻辑为每重启一次加10秒间隔时间,第一重启立即重启,第二次10s后,第三次20s
  nodeSelector:
  # <map[string]string>节点选择器,用于根据标签选择pod运行在哪个节点上,标签选择格式如下
  # 支持两种标签选择器( matchLabels与matchExpressions)
    disktype: ssd
  nodeName: t1.wft.com
  # <string>直接节点标签选择器,直接决定pods运行在哪个节点上
  containers:
  # <[]Object> -required-指定容器对象资源,可以设置多个每个-name配置段设置一个
  - name: myapp
  # <string>指定容器名称
    image: ikubernetes/myapp:v1
    # <string>指定镜像资源
    imagePullPolicy: Always
    # <string>镜像获取策略,Always(不论有没有总是去仓库), Never(本地有就用,没有就等待)
    # IfNotPresent(如果本地存在就使用,没有就下载),如果标签是latest的默认值为Always
    # 否则默认值为IfNotPresent,一旦创建不可以更改。
    lifecycle:
    # <Object>生命周期钩子
      postStart:
      # <Object>容器启动后需要执行的工作,如果执行失败会按照重启策略重启容器
        exec: 
        # <Object>执行探针,执行的自定义命令必须是容器存在的
          command: ["/bin/sh","-c","mkdir -p /data/web/html; echo 'home page' >> /data/web/html/index.html"]
          # <[]string> 执行命令返回成功则表示容器执行成功,否则返回执行失败
        httpGet:
        # <Object>http探测,返回200,300,301表示OK,其他表示不OK
          host: 192.168.0.100
          # <string>指定地址,默认为pod的ip地址
          path: /index.html 
          # <string>指定uri
          port: 80
          # <string> -required-指定端口,或者service名称
          # 如果使用名称则需要在容器暴露时设置好才能被调用
          scheme: HTTP
          # <string>建立连接使用的协议,只可以是HTTP与HTTPS,默认为HTTP
          httpHeaders:  
          # <[]Object>自定义的请求报文首部格式后如下
            name: test
            # <string> -required-
            value: test
            # <string> -required-
        tcpSocket:
        # <Object>tcp探针
          host: 192.168.0.100
          # <string> 哪个主机,默认为pod的ip地址
          port: 80
          # <string> -required-哪个端口 
      preStop:
      # <Object>容器终止前需要执行完的工作,执行完才会终止容器
        exec: 
        # <Object>执行探针,执行的自定义命令必须是容器存在的
          command: ["/bin/sh","-c","mkdir -p /data/web/html; echo 'home page' >> /data/web/html/index.html"]
          # <[]string> 执行命令返回成功则表示容器执行成功,否则返回执行失败
        httpGet:
        # <Object>http探测,返回200,300,301表示OK,其他表示不OK
          host: 192.168.0.100
          # <string>指定地址,默认为pod的ip地址
          path: /index.html 
          # <string>指定uri
          port: 80
          # <string> -required-指定端口,或者service名称
          # 如果使用名称则需要在容器暴露时设置好才能被调用
          scheme: HTTP
          # <string>建立连接使用的协议,只可以是HTTP与HTTPS,默认为HTTP
          httpHeaders:  
          # <[]Object>自定义的请求报文首部格式后如下
            name: test
            # <string> -required-
            value: test
            # <string> -required-
        tcpSocket:
        # <Object>tcp探针
          host: 192.168.0.100
          # <string> 哪个主机,默认为pod的ip地址
          port: 80
          # <string> -required-哪个端口 
    readinessProbe:
    # <Object>指定exec|httpGet|tcpSocket其中一种探针用于探测容器中的服务是否能提供服务(就绪性探测)
    # 用于判断容器中的服务就绪后的容器才加入service,如果没有设置默认10s加入service
      exec: 
      # <Object>执行探针,执行的自定义命令必须是容器存在的
        command: ["test","-e","/tmp/healthy"]       
        # <[]string> 执行命令返回"0"成功则表示容器执行成功,其他返回均表示失败 
      httpGet:
      # <Object>http探测,返回200,300,301表示OK,其他表示不OK
        host: 192.168.0.100
        # <string>指定地址,默认为pod的ip地址
        path: /index.html 
        # <string>指定uri
        port: 80
        # <string> -required-指定端口,或者service名称
        # 如果使用名称则需要在容器暴露时设置好才能被调用
        scheme: HTTP
        # <string>建立连接使用的协议,只可以是HTTP与HTTPS,默认为HTTP
        httpHeaders:  
        # <[]Object>自定义的请求报文首部格式后如下
          name: test
          # <string> -required-
          value: test
          # <string> -required-
      tcpSocket:
      # <Object>tcp探针
        host: 192.168.0.100
        # <string> 哪个主机,默认为pod的ip地址
        port: 80
        # <string> -required-哪个端口 
      failureThreshold: 3
      # <integer>探测失败容忍次数,默认为3,最小值为1
      periodSeconds: 10
      # <integer>每次探测间隔时间,默认10s
      timeoutSeconds:
      # <integer>每次探测超时时间,默认1s
      initialDelaySeconds: 5
      # <integer>容器启动后多久开始探测,默认0s
      successThreshold: 1
      # <integer>当处于失败状态时,检测成功几次才算成功,默认为1
    livenessProbe:
    # <Object>,指定exec|httpGet|tcpSocket其中一种探测容器是否存活,(存活性探测)
    # 用于检查容器,是否健康
      exec: 
      # <Object>执行探针,执行的自定义命令必须是容器存在的
        command: ["test","-e","/tmp/healthy"]       
        # <[]string> 执行命令返回"0"成功则表示容器执行成功,其他返回均表示失败
      httpGet:
      # <Object>http探测,返回200,300,301表示OK,其他表示不OK
        host: 192.168.0.100
        # <string>指定地址,默认为pod的ip地址
        path: /index.html 
        # <string>指定uri
        port: 80
        # <string> -required-指定端口,或者service名称
        # 如果使用名称则需要在容器暴露时设置好才能被调用
        scheme: HTTP
        # <string>建立连接使用的协议,只可以是HTTP与HTTPS,默认为HTTP
        httpHeaders:  
        # <[]Object>自定义的请求报文首部格式后如下
          name: test
          # <string> -required-
          value: test
          # <string> -required-
      tcpSocket:
      # <Object>tcp探针
        host: 192.168.0.100
        # <string> 哪个主机,默认为pod的ip地址
        port: 80
        # <string> -required-哪个端口 
      failureThreshold: 3
      # <integer>探测失败容忍次数,默认为3,最小值为1
      periodSeconds: 10
      # <integer>每次探测间隔时间,默认10s
      timeoutSeconds:
      # <integer>每次探测超时时间,默认1s
      initialDelaySeconds: 5
      # <integer>容器启动后多久开始探测,默认0s
      successThreshold: 1
      # <integer>当处于失败状态时,检测成功几次才算成功,默认为1
    ports:
    # <[]Object>端口名称,端口号列表,协议,地址,主要是信息性的显示暴露
    # 即如果容器本身是暴露端口的，此处就算不指定暴露端口也会被暴露出去，此处与docker的-p不一样
    # 可以设置多个每个-name配置段设置一个
    - name: http
    # <string>指定端口名称
      containerPort: 80 
      # <integer> -required-指定容器暴露的端口
      hostIP: 0.0.0.0
      # <string>指定节点地址,由于pod创建在集群里头是动态的,所以无法确定节点地址.该字段一般指定0.0.0.0
      hostPort: 80
      # <integer>指定端口
      protocol: TCP
      # <string>指定协议,默认TCP
  command: 
  - "/bin/sh"
  - "-c"
  - "sleep 7200"  
  # <[]string>用来覆盖容器启动命令,类似docker的Entrypoint,且代码不会运行在shell中
  # 如果要运行在shell中必须指明命令
  # 如果没有提供command且镜像里面提供了Entrypoint,则运行容器的Entrypoint
  args: ["-c", "while true; do echo hello; sleep 10;done"]
  # <[]string>容器没有定义CMD时,作为参数传递给容器的Entrypoint
  # 容器本身定义了CMD时,则覆盖容器里面的CMD所定义的内容接将args指定作为参数传给Entrypoint
  # 变量引用格式$(VAR_NAME),如果不想被引用$$(VAR_NAME)
  # command与args详细关系如下:
  # https://kubernetes.io/docs/tasks/inject-data-application/define-command-argument-container/#running-a-command-in-a-shell
  # 如果没有定义command也没有定义args,则默认使用docker镜像中的Entrypoint与Cmd
  # 如果只提供command但没有提供args,则只运行command,镜像中的Entrypoint与Cmd被忽略
  # 如果只提供args但没定义command,则使用镜像中的Entrypoint做命令,把args当参数传入,忽略镜像中的Cmd
  # 如果提供了command与args,就表示完全自定义参数,镜像中的Entrypoint与Cmd被忽略
